--- a/斯坦福大学机器学习课程.md
+++ b/斯坦福大学机器学习课程.md
@@ -124,13 +124,13 @@
 
 ### 课程列表
 
-1.  [监督机器学习：回归和分类](https://www.coursera.org/learn/supervised-machine-learning-regression-classification)
+1.  [监督机器学习：回归和分类](https://www.coursera.org/learn/machine-learning?specialization=machine-learning-introduction)
     *   33小时
     *   评分：4.9/5（11,927评价）
-2.  [高级学习算法](https://www.coursera.org/learn/advanced-learning-algorithms)
+2.  [高级学习算法](https://www.coursera.org/learn/advanced-learning-algorithms?specialization=machine-learning-introduction)
     *   34小时
     *   评分：4.9/5（3,015评价）
-3.  [无监督学习，推荐器，强化学习](https://www.coursera.org/learn/unsupervised-learning-recommenders-reinforcement)
+3.  [无监督学习，推荐器，强化学习](https://www.coursera.org/learn/unsupervised-learning-recommenders-reinforcement-learning?specialization=machine-learning-introduction)
     *   27小时
     *   评分：4.9/5（1,479评价）
 
